--- a/references.bib
+++ b/references.bib
@@ -341,3 +341,17 @@ Combining science with massive data and technology resources in a cloud-computin
 }
 
 
+@book{butcher_tour_2016,
+	address = {Washington, DC},
+	edition = {Third edition},
+	title = {Tour of the electromagnetic spectrum},
+	isbn = {978-0-9967780-2-2},
+	language = {en},
+	publisher = {National Aeronautics and Space Administration},
+	author = {Butcher, Ginger},
+	collaborator = {United States},
+	year = {2016},
+	keywords = {Artificial satellites, Electromagnetic waves},
+	file = {Butcher - 2016 - Tour of the electromagnetic spectrum.pdf:D\:\\Zotero\\storage\\M4WZ434E\\Butcher - 2016 - Tour of the electromagnetic spectrum.pdf:application/pdf},
+}
+
