--- a/Week1.qmd
+++ b/Week1.qmd
@@ -1,91 +1,94 @@
-# Week 1
+# Week 1 - Getting started with remote sensing
 
 ## Summary
 
-- Data types in remote sensing:
-    - Passive data: Energy in electromagnetic form (e.g., human eyes)
-    - Active data: Energy in addition to illumination (e.g., radar)
-- Interaction of EM waves with Earth's surface and atmosphere:
-    - Single: This category refers to the interaction of EM waves with only one component of the Earth's system, either the surface or the atmosphere. For example, when sunlight (an EM wave) directly reaches the Earth's surface without interacting with the atmosphere, it is considered a single interaction. Similarly, if the EM wave only interacts with the atmosphere and does not reach the surface, it is also a single interaction. In remote sensing, single interactions are usually the most straightforward to analyze. The most straightforward to analyze.
-    - Dual: Dual interactions involve the EM waves interacting with both the Earth's surface and atmosphere. In this case, the EM waves pass through the atmosphere, interact with the Earth's surface, and then pass back through the atmosphere before reaching the sensor. This process results in changes to the EM waves, such as absorption or scattering, which can affect the quality and interpretation of the remote sensing data. apply atmospheric correction techniques to retrieve accurate information about the Earth's surface.
-    - Quad: Quad interactions refer to EM waves interacting with multiple components of the Earth's system, such as the surface, atmosphere, and other features (e.g., vegetation, water bodies). Involve various processes such as absorption, scattering, reflection, and transmission. Account for the unique characteristics and properties of each component involved, making the process more challenging.
+-   Data types in remote sensing:
+    -   Passive data: Energy in electromagnetic form (e.g., human eyes)
+    -   Active data: Energy in addition to illumination (e.g., radar)
+-   Interaction of EM waves with Earth's surface and atmosphere:
+    -   Single: This category refers to the interaction of EM waves with only one component of the Earth's system, either the surface or the atmosphere. For example, when sunlight (an EM wave) directly reaches the Earth's surface without interacting with the atmosphere, it is considered a single interaction. Similarly, if the EM wave only interacts with the atmosphere and does not reach the surface, it is also a single interaction. In remote sensing, single interactions are usually the most straightforward to analyze. The most straightforward to analyze.
+    -   Dual: Dual interactions involve the EM waves interacting with both the Earth's surface and atmosphere. In this case, the EM waves pass through the atmosphere, interact with the Earth's surface, and then pass back through the atmosphere before reaching the sensor. This process results in changes to the EM waves, such as absorption or scattering, which can affect the quality and interpretation of the remote sensing data. apply atmospheric correction techniques to retrieve accurate information about the Earth's surface.
+    -   Quad: Quad interactions refer to EM waves interacting with multiple components of the Earth's system, such as the surface, atmosphere, and other features (e.g., vegetation, water bodies). Involve various processes such as absorption, scattering, reflection, and transmission. Account for the unique characteristics and properties of each component involved, making the process more challenging.
 
-| Interaction Type | Components of Earth | Processes Considered | Difficulty |
-| --- | --- | --- | --- |
-| Single | Surface OR Atmosphere | Direct interaction with one component | Most straightforward to analyze |
-| Dual | Surface AND Atmosphere | Absorption, scattering | Requires atmospheric correction for accurate results |
-| Quad | Surface, Atmosphere, Features | Absorption, scattering, reflection, transmission | More challenging due to multiple components involved |
+| Interaction Type | Components of Earth           | Processes Considered                             | Difficulty                                           |
+|------------------|------------------|------------------|------------------|
+| Single           | Surface OR Atmosphere         | Direct interaction with one component            | Most straightforward to analyze                      |
+| Dual             | Surface AND Atmosphere        | Absorption, scattering                           | Requires atmospheric correction for accurate results |
+| Quad             | Surface, Atmosphere, Features | Absorption, scattering, reflection, transmission | More challenging due to multiple components involved |
 
 ### **Remote Sensing Data Formats**
 
-- Raster formats:
-    - BIL
-    - BSQ
-    - BIP
-    - GeoTIFF
+-   Raster formats:
+    -   BIL
+    -   BSQ
+    -   BIP
+    -   GeoTIFF
 
 ### **Four Resolutions in Remote Sensing**
 
-1. Spatial resolution:
-    - Ranges from 10 cm to several kilometers
-2. Spectral resolution:
-    - Number of different spectral bands captured
-    - Unique spectral signatures for each feature on Earth
-    - Atmospheric windows
-    - Vegetation: Red edge - infrared bands
-        - Application: Analyze infrared bands in cities to identify access to vegetation
-3. Radiometric resolution:
-    - Resolution of a cell's value
-4. Temporal resolution:
-    - Usually inversely related to pixel size (spatial resolution)
-- Example satellite sensor: MODIS
+1.  Spatial resolution:
+    -   Ranges from 10 cm to several kilometers
+2.  Spectral resolution:
+    -   Number of different spectral bands captured
+    -   Unique spectral signatures for each feature on Earth
+    -   Atmospheric windows
+    -   Vegetation: Red edge - infrared bands
+        -   Application: Analyze infrared bands in cities to identify access to vegetation
+3.  Radiometric resolution:
+    -   Resolution of a cell's value
+4.  Temporal resolution:
+    -   Usually inversely related to pixel size (spatial resolution)
+
+-   Example satellite sensor: MODIS
 
 ### **Bands Explained**
 
-- In remote sensing, bands refer to the specific ranges of wavelengths captured by a sensor.
-- Each band captures information about different features on Earth's surface.
-- Understanding the properties of each band helps in the interpretation and analysis of remote sensing data.
+-   In remote sensing, bands refer to the specific ranges of wavelengths captured by a sensor.
 
-[]()
+-   Each band captures information about different features on Earth's surface.
+
+-   Understanding the properties of each band helps in the interpretation and analysis of remote sensing data.
+
+
 
 ## Application
 
-| Type of Wave | Wavelength Range | Frequency Range | Example Applications |
-| --- | --- | --- | --- |
-| Radio Waves | >1mm | <300 GHz | Broadcasting, communication, radar |
-| Microwaves | 1mm - 1m | 300 MHz - 300 GHz | Cooking, communication, radar |
-| Infrared Waves | 700 nm - 1 mm | 300 GHz - 430 THz | Thermal imaging, remote controls |
-| Visible Light | 400 nm - 700 nm | 430 THz - 750 THz | Human vision, photography |
-| Ultraviolet Waves | 10 nm - 400 nm | 750 THz -30 PHz | Sterilization, fluorescence microscopy |
-| X-Rays | <10 nm | >30 PHz | Medical imaging, airport security |
-| Gamma Rays | <0.01 nm | >30 EHz | Cancer treatment, nuclear medicine |
+I explored @butcher_tour_2016 for a better understanding of electromagnectic waves and the application in Remote Sensing.
 
-Start
-|
-V
-Generate electromagnetic waves
-|
-V
-Determine frequency, wavelength, or energy
-|
-V
-Classify waves into types (radio, microwave, infrared, visible light, ultraviolet, X-rays, gamma rays)
-|
-V
-Identify applications for each type of wave (broadcasting, communication, cooking, thermal imaging, human vision, medical imaging)
-|
-V
-End
-
-### Practical
+| Type of Wave      | Wavelength Range | Frequency Range   | Example Applications                   |
+|------------------|------------------|------------------|------------------|
+| Radio Waves       | \>1mm            | \<300 GHz         | Broadcasting, communication, radar     |
+| Microwaves        | 1mm - 1m         | 300 MHz - 300 GHz | Cooking, communication, radar          |
+| Infrared Waves    | 700 nm - 1 mm    | 300 GHz - 430 THz | Thermal imaging, remote controls       |
+| Visible Light     | 400 nm - 700 nm  | 430 THz - 750 THz | Human vision, photography              |
+| Ultraviolet Waves | 10 nm - 400 nm   | 750 THz -30 PHz   | Sterilization, fluorescence microscopy |
+| X-Rays            | \<10 nm          | \>30 PHz          | Medical imaging, airport security      |
+| Gamma Rays        | \<0.01 nm        | \>30 EHz          | Cancer treatment, nuclear medicine     |
 
 ![Spectral Feature Space, Vegetation On Bands B04 and B08](images/spectral_feature_space_vege_B04_B08.png){#fig-vege}
-
-## Application:
 
 "Spectral Feature Space, Vegetation On Bands B04 and B08"
 
 One of the applications really attracted me was the spatial signature of vegetation on the terra, as we could assign features to each end of the spatial signature area see @fig-vege, such as bare land on the right end of the triangle-like area where red light captured are dense while near-infrared level is low. Heavy vegetation are witnessed at the upper end of the triangle-like area where red light low and near-infrared is high, indicating heavy biomass. As for the left-down corner where both red and near-infrared are low, we can identify wet lands. This is integrated in the NDVI (Normalized Difference Vegetation Index) to estimate vegetation cover.
+
+workflow of the Electromagnetic Spectrum
+```{mermaid}
+%%{init: {'theme':'base', 'themeVariables': {'edge': 'green'}}}%%
+graph TD
+  A[Start]
+  B[Generate electromagnetic waves]
+  C[Determine frequency, wavelength, or energy]
+  D[Classify waves into types]
+  E[Identify applications for each type of wave]
+  F[End]
+
+  A-->B
+  B-->C
+  C-->D
+  D-->E
+  E-->F
+
+```
 
 Spatial signatures can also be used to monitor the health of vegetation by identifying patterns of quavariation in spectral reflectance that are indicative of stress or disease. For example, vegetation that is stressed or diseased may have a different spectral reflectance signature than healthy vegetation, which can be identified using spatial signatures.
 
@@ -95,8 +98,6 @@ Overall, spatial signatures are a powerful tool for vegetation monitoring, as th
 
 ## Reflection
 
-just state what interest you and why, as well as the application. Application: Context matters. Why useful? What had it assisted achieving. Mind map of concepts, to show understanding of data and workflow
+Having active sensing methods is inspiring as it reminds us that instead of struggling with improving image quality sensed passively using sunlight, we can try altering to artificial signals. Also that sunlight is but another form of electromagnetic wave. This implies a potential to cancel the boundary between natural phenomenon and artificial forms. I feel more encouraged to more actively explore relationships in nature with the devices at hand. I am considering implement active sensors to include SAR data for IoT-based data pipelines. With active sensing data like SAR monitoring forestry real-time, the machine learning model can acquire enough ground truth data from nature for constant adaptation. This could be incorporated into forestry monitoring systems and disaster monitoring systems to cover for both accuracy and rapidness.
 
-One of the challenges I encountered is to navigate the complexities of the interface of SNAP and QGIS. It becomes clear to me that yes implementing several functions in code can be challenging, but a software with collective functions as a whole can be mindblowing even when with decent GUIs. Specifically, finding which function falling under which menu consumes a lot of time, and figuring out filling parameters to carry the analysis also took some efforts of iterative validation.
-
-When doing the operation in R on a script level, it becomes confusing where I put the data
+One of the challenges I encountered is to navigate the complexities of the interface of SNAP and QGIS. It becomes clear to me that yes implementing several functions in code can be challenging, but a software with collective functions as a whole can be mindblowing even when with decent GUIs. Specifically, finding which function falling under which menu consumes a lot of time, and figuring out filling parameters to carry the analysis also took some efforts of iterative validation. Anyway, it's nice to have attempts of designing GUIs for EO data manipulation. Hopefully, with Large Language Model simplifying GIS software designing, we can more easily translate code workflows into user-friendly interfaces and apply our design ideas.
