--- a/Week2.qmd
+++ b/Week2.qmd
@@ -1,8 +1,10 @@
 # Week 2 - Portfolio
+Slide about flood prediction and monitoring is here: https://tongmengxie.github.io/Xaringan_slides
 ```{r, echo = FALSE, out.width='40%'}
-xaringanExtra::embed_xaringan(
-  url = "https://TongmengXie.github.io/SLIDE_NAME",
-  ratio = "16:9") 
+ xaringanExtra::embed_xaringan(
+ url = "https://tongmengxie.github.io/Xaringan_slides",
+ ratio = "16:9") 
 ```
 
-- [Xaringan operation instruction](https://andrewmaclachlan.github.io/CASA0023/2_portfolio.html)
+## Available instructions
+- [Introducing Xaringan](https://andrewmaclachlan.github.io/CASA0023/2_portfolio.html)
