--- a/Week8.qmd
+++ b/Week8.qmd
@@ -29,7 +29,7 @@ Also, there are other contributors to the heat:
 The cost of the Urban Heat Island can be divided into social, environmental, and economic costs.
 
 | Type of Cost        | Examples                                                        |
-|---------------------|-----------------------------------------------------------------|
+|------------------|-----------------------------------------------------|
 | Social Costs        | Population-adjusted excess mortality rates, heat-related deaths |
 | Environmental Costs | Increase in fossil fuel usage                                   |
 | Economic Costs      | Loss of Gross Domestic Product (GDP)                            |
@@ -43,7 +43,7 @@ For instance, under a low greenhouse gas scenario, the percent GDP lost from UHI
 ##### Local
 
 | City      | Initiatives                                 | Technology                                                               |
-|-----------|---------------------------------------------|--------------------------------------------------------------------------|
+|---------------|---------------------|------------------------------------|
 | Singapore | Green buildings                             | Urban greenery                                                           |
 | Medellin  | Green Corridors                             | Urban greenery                                                           |
 | Sydney    | Turn Down the Heat Strategy and Action Plan | Reflective roofs/pavements/sidewalks, Cool roads trial in Western Sydney |
@@ -70,11 +70,11 @@ For instance, under a low greenhouse gas scenario, the percent GDP lost from UHI
 -   **monitor** UHI effects based on associated land-temperature dynamics
 -   Assessment at finer spatial scales (e.g., block subdivisions)
 
-## Methodology
+### Methodology
 
 ------------------------------------------------------------------------
 
-### Temperature Modeling
+#### Temperature Modeling
 
 ------------------------------------------------------------------------
 
@@ -94,7 +94,7 @@ For instance, under a low greenhouse gas scenario, the percent GDP lost from UHI
 
 ------------------------------------------------------------------------
 
-### Data-Driven Tree Placement
+#### Data-Driven Tree Placement
 
 ------------------------------------------------------------------------
 
@@ -126,7 +126,7 @@ For instance, under a low greenhouse gas scenario, the percent GDP lost from UHI
 
 ------------------------------------------------------------------------
 
-## Result
+### Result
 
 Table 1: Results of assessments of urban design factors on UHI effect in Perth.
 
@@ -143,7 +143,7 @@ Table 1: Results of assessments of urban design factors on UHI effect in Perth.
 Table 2: Total population and population density per 0.1 km2 between 2011 and 2016 for Subiaco and Currambine SA1s as defined by the ABS.
 
 | **SA1**    | **Total Population (2011)** | **Total Population (2016)** | **Population Density per 0.1 km2 (2011)** | **Population Density per 0.1 km2 (2016)** |
-|------------|-----------------------------|-----------------------------|-------------------------------------------|-------------------------------------------|
+|--------------|--------------|--------------|----------------|----------------|
 | Subiaco    | N/A                         | N/A                         | 325                                       | 712                                       |
 | Currambine | N/A                         | N/A                         | 310                                       | 324                                       |
 
