--- a/index.tex
+++ b/index.tex
@@ -215,7 +215,7 @@
 
 \begin{document}
 \maketitle
-\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[boxrule=0pt, frame hidden, borderline west={3pt}{0pt}{shadecolor}, sharp corners, interior hidden, enhanced, breakable]}{\end{tcolorbox}}\fi
+\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[frame hidden, borderline west={3pt}{0pt}{shadecolor}, sharp corners, interior hidden, breakable, enhanced, boxrule=0pt]}{\end{tcolorbox}}\fi
 
 \renewcommand*\contentsname{Table of contents}
 {
@@ -580,6 +580,12 @@ user-friendly interfaces and apply our design ideas.
 
 \hypertarget{week-2---portfolio}{%
 \chapter{Week 2 - Portfolio}\label{week-2---portfolio}}
+
+Slide about flood prediction and monitoring is here:
+https://tongmengxie.github.io/Xaringan\_slides
+
+\hypertarget{available-instructions}{%
+\section{Available instructions}\label{available-instructions}}
 
 \begin{itemize}
 \tightlist
