--- a/Week4.qmd
+++ b/Week4.qmd
@@ -1,10 +1,10 @@
-# Week4 - Policy Case Study in
+# Week4 - Policy Case Study in New York City
 
 [OneNYC-2050-Summary.pdf (cityofnewyork.us)](https://onenyc.cityofnewyork.us/wp-content/uploads/2019/05/OneNYC-2050-Summary.pdf)
 
 ## Summary
 
-
+![workflow of the Electromagnetic Spectrum](images/Wk4_NYC%20plan.svg){#fig-wk4NYC}
 
 ## Application
 
