--- a/references.bib
+++ b/references.bib
@@ -355,3 +355,25 @@ Combining science with massive data and technology resources in a cloud-computin
 	file = {Butcher - 2016 - Tour of the electromagnetic spectrum.pdf:D\:\\Zotero\\storage\\M4WZ434E\\Butcher - 2016 - Tour of the electromagnetic spectrum.pdf:application/pdf},
 }
 
+
+@article{karasiak_spatial_2022,
+	title = {Spatial dependence between training and test sets: another pitfall of classification accuracy assessment in remote sensing},
+	volume = {111},
+	issn = {1573-0565},
+	shorttitle = {Spatial dependence between training and test sets},
+	url = {https://doi.org/10.1007/s10994-021-05972-1},
+	doi = {10.1007/s10994-021-05972-1},
+	abstract = {Spatial autocorrelation is inherent to remotely sensed data. Nearby pixels are more similar than distant ones. This property can help to improve the classification performance, by adding spatial or contextual features into the model. However, it can also lead to overestimation of generalisation capabilities, if the spatial dependence between training and test sets is ignored. In this paper, we review existing approaches that deal with spatial autocorrelation for image classification in remote sensing and demonstrate the importance of bias in accuracy metrics when spatial independence between the training and test sets is not respected. We compare three spatial and non-spatial cross-validation strategies at pixel and object levels and study how performances vary at different sample sizes. Experiments based on Sentinel-2 data for mapping two simple forest classes show that spatial leave-one-out cross-validation is the better strategy to provide unbiased estimates of predictive error. Its performance metrics are consistent with the real quality of the resulting map contrary to traditional non-spatial cross-validation that overestimates accuracy. This highlight the need to change practices in classification accuracy assessment. To encourage it we developped Museo ToolBox, an open-source python library that makes spatial cross-validation possible.},
+	language = {en},
+	number = {7},
+	urldate = {2023-03-24},
+	journal = {Machine Learning},
+	author = {Karasiak, N. and Dejoux, J.-F. and Monteil, C. and Sheeren, D.},
+	month = jul,
+	year = {2022},
+	keywords = {Accuracy assessment, Cross-validation, Overfitting, Remote sensing, Spatial autocorrelation},
+	pages = {2715--2740},
+	file = {Full Text PDF:D\:\\Zotero\\storage\\GD5GZM6J\\Karasiak 等 - 2022 - Spatial dependence between training and test sets.pdf:application/pdf},
+}
+
+
