--- a/Week7.qmd
+++ b/Week7.qmd
@@ -90,11 +90,13 @@ Object-based image classification
 
 Moran's I (Spatial Cross Validation)
 
-## Application - to be completed
+## Application
 
 In remote sensing, it is often challenging to accurately classify mixed pixels, which contain a combination of different materials or components. Endmembers refer to pure or nearly pure materials that are present within a mixed pixel. By modelling the spectral signature of a mixed pixel as a linear combination of the spectral signatures of the constituent endmembers, we can determine the contribution of each endmember to the overall reflectance or radiance of the mixed pixel.
 
 This approach can be very useful in urban recognition, where it is essential to accurately classify the different land covers present within a pixel. Furthermore, it can also help us to understand the composition of the land cover in a given area, which can have important implications for environmental monitoring and management. This approach has been applied in various studies to estimate urban land cover, such as the work by Zhang et al. (2018) that utilised endmember extraction to detect urban impervious surfaces.
+
+This week's paper choice: @karasiak_spatial_2022. ![Workflow](images/Wk7_wkfl.png){#fig-wkfl}
 
 ## Reflection
 
@@ -103,4 +105,3 @@ The workflow of Classification of Surface Reflectance and Top of Atmosphere data
 Optionally, in supplementation to manual labelling, automated labelling workflow (e.g. roboflow) can be introduced to curtail repeatitive works in image labelling[@nair2018automated]. However, manual labelling is not replaceable at current time [@robison2018future] and the pinning down of ground truth seems to always need human intervention in addition to machine automation.
 
 The introduction of production accuracy and user accuracy is also interesting, as these terminologies are designed presupposing a customer/producer split, dwarfing precision-recall in readability. The treadeoff to be made between the two is crucial, and this is problematically handled by introducing F1 score with two competitive components, and improved by introducing Receiver Operating Characteristic Curve (ROCC) with two "good" indicators, true positive rate and false positive rate.
-
